# escalas-aad

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  composer.json  package-lock.json
.claude/: settings.local.json
.github/workflows/: tests.yml
app/Enums/: AbsenceType.php  AssignmentOrigin.php  ContractType.php  Regime.php  ScheduleStatus.php  SwapStatus.php  VacationStatus.php
app/Events/: SchedulePublished.php
app/Exports/: ScheduleXlsx.php
app/Jobs/: GenerateScheduleJob.php  ReoptimizeScheduleJob.php
app/Listeners/: SendSchedulePublishedNotifications.php
app/Models/: Absence.php  AuditLog.php  CoverageRule.php  Employee.php  Invitation.php  Organization.php  RuleConfig.php  Schedule.php  ShiftAssignment.php  ShiftType.php  SwapRequest.php  User.php  VacationRequest.php
app/Notifications/: InvitationAccepted.php  InvitationInvite.php  SchedulePublishedNotification.php  SwapApplied.php  SwapAwaitingApproval.php  SwapCancelled.php  SwapDeclined.php  SwapRejected.php  (+3 more)
bootstrap/: app.php
config/: services.php
docs/: 01-planeamento.md  02-regras-detalhadas.md  03-prompt-desenvolvimento.md  HANDOFF.md  PRD.md
prototipos/: prototipo-escalas-aad.html
routes/: auth.php  settings.php  web.php
scripts/: dev.sh  github-setup.sh
solver/: README.md  pyproject.toml
solver/app/: main.py  model.py  schemas.py
solver/tests/: helpers.py  test_absences.py  test_api.py  test_generate_month.py  test_generate_week.py  test_infeasible.py  test_swap_candidates.py  test_vacation_impact.py  test_validate.py
(+113 files in other folders)
