[project]
name = "solver"
version = "0.1.0"
description = "Motor de regras das escalas AAD — OR-Tools CP-SAT (ADR-0002)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "ortools>=9.11",
    "pydantic>=2.9",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
